--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx|jsx)\"",
