--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "axios": "^1.6.3",
+        "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "formik": "^2.4.5",
         "prettier": "^3.3.0",
@@ -29,7 +30,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID react-scripts build",
+        "build": "cross-env PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx|jsx)\"",
