--- a/package.json
+++ b/package.json
@@ -30,12 +30,10 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "cross-env PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID react-scripts build",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx|jsx)\"",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json|tsx|jsx)\""
     },
     "homepage": "https://raineandsea.github.io/website/",
     "eslintConfig": {
