--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.1",
+        "react-image-gallery": "^1.3.0",
         "react-router-dom": "^6.21.1",
         "react-scripts": "5.0.1",
         "react-scroll": "^1.9.0",
@@ -55,6 +56,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-image-gallery": "^1.2.4",
         "@types/react-scroll": "^1.8.10",
         "gh-pages": "^5.0.0"
     }
