--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@emotion/css": "^11.11.2",
+        "@emotion/styled": "^11.11.5",
         "@paypal/react-paypal-js": "^8.1.3",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
