--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.5",
         "formik": "^2.4.5",
+        "jwt-decode": "^4.0.0",
         "prettier": "^3.3.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
